Bug 1300405 - Fix insertion of already selected options r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D166955